--- a/index.css
+++ b/index.css
@@ -155,6 +155,14 @@ select {
   opacity: 0.75;
 }
 
+@media only screen and (min-width: 768px) {
+  * {
+    /* font-family: 'Yatra One', cursive; */
+    font-family: 'Gotu', sans-serif;
+    font-weight: bolder;
+  }
+}
+
 @media only screen and (max-width: 768px) {
   body {
     width: 100%;
