show parvas in mobile

--- a/parvas.css
+++ b/parvas.css
@@ -33,6 +33,7 @@ table {
 @media only screen and (max-width: 425px) {
     #parvas {
         width: 90%;
+        display: block !important;
     }
 }
 
