--- a/public_holidays.css
+++ b/public_holidays.css
@@ -33,3 +33,17 @@
   margin-left: 30px;
   text-indent: -30px;
 }
+
+
+@media only screen and (max-width: 768px) {
+  #public_holiday_box {
+    width: 85%;
+  }
+}
+
+
+@media only screen and (max-width: 425px) {
+  #public_holiday_box {
+      width: 90%;
+  }
+}
