--- a/index_details.css
+++ b/index_details.css
@@ -221,7 +221,7 @@ input[type="submit"][disabled]:hover {
 
   * {
     /* font-family: 'Yatra One', cursive; */
-    font-family: 'Gotu', sans-serif;
+    font-family: 'Laila', sans-serif;
     font-weight: bolder;
   }
 
