--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,7 @@ body {
 }
 
 .card-header {
-  background: url('logo.svg') 5% center, url('logo.svg') 95% center;
+  background: url('../assets/logo.svg') 5% center, url('../assets/logo.svg') 95% center;
   background-repeat: no-repeat;
   background-size: auto 80%;
 }
@@ -49,7 +49,7 @@ table td:hover {
 .table td {
   padding: 7px;
   transition: 0.2s;
-  background: url('watermark.svg');
+  background: url('../assets/watermark.svg');
   background-repeat: no-repeat;
   background-position: center center;
   background-size: auto 80%;
@@ -183,14 +183,14 @@ select {
   }
 
   .card-header {
-    background: url("logo.svg");
+    background: url("../assets/logo.svg");
     background-repeat: no-repeat;
     background-position: center center;
     background-size: auto 80%;
   }
 
   #calendar {
-    background: url("watermark.svg");
+    background: url("../assets/watermark.svg");
     background-repeat: no-repeat;
     background-position: center center;
     background-size: auto 50%;
@@ -201,7 +201,7 @@ select {
   }
 
   .table td:hover {
-    background: url("watermark.svg") !important;
+    background: url("../assets/watermark.svg") !important;
     background-repeat: no-repeat !important;
     background-position: center center !important;
     background-size: auto 80% !important;
