init loading anim

--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,31 @@ body {
   line-height: 1.1 !important;
 }
 
+#loading {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  text-align: center;
+  background-color: #fff;
+  z-index: 99;
+}
+
+#loading_anim {
+  height: 25%;
+  line-height: 1000%;
+}
+
+#loading_title {
+  padding-top: 10px;
+  font-size: xx-large;
+}
+
 .card-header {
   background: url('../assets/logo.svg') 5% center, url('../assets/logo.svg') 95% center;
   background-repeat: no-repeat;
