--- a/css/clock.css
+++ b/css/clock.css
@@ -51,6 +51,15 @@ span.ticks b {
     color: blue;
 }
 
+#timetype {
+    position: absolute;
+    left: 50%;
+    top: 15%;
+    transform: translateX(-50%);
+    font-size: small;
+    color: maroon;
+}
+
 .hand, .handrev {
     position: absolute;
     display: flex;
@@ -75,41 +84,41 @@ span.ticks b {
 }
 
 #digital {
-    position: absolute;
-    font-size: 14px;
+    position: relative;
+    font-size: 13px;
     font-weight: 900;
-    top: 67%;
-    left: 15%;
+    top: 35%;
+    left: 0%;
 }
 
 #clockyear {
-    --clr: blue;
+    --clr: cyan;
     --ht: 70px;
     --wt: 2px;
 }
 
 #hour {
-    --clr: black;
+    --clr: darkgreen;
     --ht: 25px;
     --wt: 5px;
 }
 
 #rev_hour {
-    --clr: black;
+    --clr: darkgreen;
     --ht: 10px;
     --wt: 5px;
     /* filter: drop-shadow(0px 0px 5px lime); */
 }
 
 #minute {
-    --clr: black;
+    --clr: darkblue;
     --ht: 40px;
     --wt: 4px;
     /* filter: drop-shadow(0px 0px 5px lime); */
 }
 
 #rev_minute {
-    --clr: black;
+    --clr: darkblue;
     --ht: 12px;
     --wt: 4px;
 }
@@ -128,11 +137,23 @@ span.ticks b {
 
 #digital>span {
     line-height: 1.0;
-    color: darkblue;
+    /* color: darkblue; */
     height: 10px;
     width: 15px;
     display: inline-block;
     font-family: 'Consolas', monospace;
+}
+
+#digital_hour {
+    color: darkgreen;
+}
+
+#digital_minute {
+    color: darkblue;
+}
+
+#digital_second {
+    color: red;
 }
 
 @media screen and (max-width: 770px) {
