--- a/css/parvas.css
+++ b/css/parvas.css
@@ -41,6 +41,7 @@ table {
 @media print {
     #parvas {
         display: block !important;
+        font-size: 12px;
         background: url('data:image/svg+xml; utf8, <svg style="transform:rotate(-5deg)" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" fill-opacity="0.45"><style>.svgtext {font: italic 28px serif;font-weight: bolder;fill: maroon;}</style><text x="0" y="40" class="svgtext">BRIHAT CALENDAR </text></svg>') 0 0/200px 45px;
     }
     
